-- Copyright (C) 2015 Yuval Langer
--
-- This file is part of Yasam Sim.
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as published by
-- the Free Software Foundation, either version 3 of the License, or
-- (at your option) any later version.
--
-- This program is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU Affero General Public License for more details.
--
-- You should have received a copy of the GNU Affero General Public License
-- along with this program.  If not, see <http://www.gnu.org/licenses/>. -}

name:                yasamsim
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AGPL-3
license-file:        LICENSE
author:              Yuval Langer
maintainer:          yuval.langer@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable yasamsim
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base,
                       gloss
  hs-source-dirs:      src
  default-language:    Haskell2010
